Remove custom requirements -- not agreed upon yet